testsuite/tests/source/errors/demo5.gpr
project Demo5 is
   --  main.adb files found in src3/** should be reported as error
   for Source_Dirs use ("src3/**");
   for Object_Dir use "obj";
   for Main use ("main.adb");
end Demo5;
